force-app/main/default/objects/Dispatch_Order_Line__c/Dispatch_Order_Line__c.object-meta.xml
<CustomObject>
    <label>Linea de Orden de Despacho</label>
    <nameField>
        <displayFormat>LOD-{00000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lineas de Orden de Despacho</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>