force-app/main/default/objects/Dispatch_Order_Line__c/fields/Dispatch_Order__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Order__c</fullName>
    <label>Orden de Despacho</label>
    <referenceTo>Dispatch_Order__c</referenceTo>
    <relationshipLabel>Lineas de Orden de Despacho</relationshipLabel>
    <relationshipName>Dispatch_Order_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>