force-app/main/default/objects/Dispatch_Order_Line__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>Purchase_Order_Line__r.Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de Producto</label>
    <type>Text</type>
</CustomField>