force-app/main/default/objects/Dispatch_Order_Line__c/fields/Purchase_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Linea de Orden de Compra</label>
    <referenceTo>Purchase_Order_Line__c</referenceTo>
    <relationshipLabel>Lineas de Orden de Despacho</relationshipLabel>
    <relationshipName>Purchase_Order_Lines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>